résolution de plusieurs bugs. Toujours pbm de fragmnet_inscription qui ne veut pas venir

--- a/res/layout/activity_fragment_inscription.xml
+++ b/res/layout/activity_fragment_inscription.xml
@@ -15,7 +15,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
-        android:text="Numéro de Téléphone"
+        android:text="Numéro de Téléphone pour inscription"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
