Ajout du service permettant de choisir une "cible". A tester sur un vrai téléphone et non émulateur (pour numero de tel). Reste problème récupération et affichage token

--- a/res/layout/activity_contacts.xml
+++ b/res/layout/activity_contacts.xml
@@ -17,4 +17,13 @@
         android:layout_marginTop="36dp" >
     </ListView>
 
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="Choisissez votre cible!"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
 </RelativeLayout>
