--- a/res/layout/title.xml
+++ b/res/layout/title.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/title"
     android:layout_width="match_parent"
     android:layout_height="30dp"
     android:gravity="center_vertical|center_horizontal"
@@ -7,17 +8,24 @@
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:src="@drawable/ic_launcher" />
 
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="224dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="LoveBot"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="25sp" />
+    
+        <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:src="@drawable/ic_launcher" />
 
 </LinearLayout>
