--- a/res/layout/activity_fragment_login.xml
+++ b/res/layout/activity_fragment_login.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView1"
         android:layout_centerHorizontal="true"
+        android:inputType="number"
         android:ems="10" >
         <requestFocus />
     </EditText>
